--- a/app/src/main/res/layout/activity_eip681.xml
+++ b/app/src/main/res/layout/activity_eip681.xml
@@ -82,7 +82,7 @@
             android:layout_below="@id/holding_view"
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="10dp"
-            android:src="@drawable/ic_logo" />
+            android:src="@drawable/ic_logo_zoe" />
 
         <TextView
             android:id="@+id/address"
