--- a/app/src/main/res/layout/dialog_action_sheet.xml
+++ b/app/src/main/res/layout/dialog_action_sheet.xml
@@ -42,7 +42,7 @@
             android:contentDescription="@string/app_name"
             android:layout_width="50dp"
             android:layout_height="50dp"
-            android:src="@drawable/ic_launcher_foreground"
+            android:src="@drawable/ic_logo_zoe"
             android:layout_marginEnd="10dp"
             android:layout_centerVertical="true"
             android:layout_alignParentEnd="true" />
