--- a/app/src/main/res/layout/activity_add_edit_dapp.xml
+++ b/app/src/main/res/layout/activity_add_edit_dapp.xml
@@ -40,7 +40,7 @@
                 android:layout_gravity="center_horizontal"
                 android:layout_marginBottom="15dp"
                 android:layout_marginTop="15dp"
-                android:src="@drawable/ic_logo" />
+                android:src="@drawable/ic_logo_zoe" />
 
             <TextView
                 android:layout_width="wrap_content"
