--- a/app/src/main/res/layout/layout_browser_history.xml
+++ b/app/src/main/res/layout/layout_browser_history.xml
@@ -13,9 +13,11 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
-            android:layout_marginBottom="25dp"
             android:layout_marginTop="40dp"
-            android:src="@drawable/ic_logo" />
+            android:layout_marginBottom="25dp"
+            android:scaleX="2.0"
+            android:scaleY="2.0"
+            android:src="@drawable/ic_logo_zoe" />
 
         <TextView
             android:layout_width="wrap_content"
