--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -3,7 +3,7 @@
     xmlns:custom="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/white">
+    android:background="#347AF0">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -19,93 +19,94 @@
             android:layout_height="wrap_content"
             android:background="@drawable/ic_logo_zoe"
             android:gravity="center_horizontal"
-            android:scaleX="2.0"
-            android:scaleY="2.0" />
+            android:scaleX="2"
+            android:scaleY="2" />
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="25dp"
+            android:layout_marginTop="50dp"
+            android:fontFamily="@font/font_bold"
             android:gravity="center_horizontal"
             android:text="@string/welcome_to_alphawallet"
-            android:textColor="@color/text_black"
+            android:textColor="@color/white"
             android:textSize="26sp" />
+
 
     </LinearLayout>
 
     <LinearLayout
         android:id="@+id/layout_new_wallet"
-        android:visibility="gone"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:layout_marginEnd="16dp"
-        android:layout_marginStart="16dp"
-        android:orientation="vertical">
+        android:layout_marginStart="40dp"
+        android:layout_marginEnd="40dp"
+        android:layout_marginBottom="90dp"
+        android:orientation="vertical"
+        android:visibility="visible">
 
         <Button
             android:id="@+id/button_create"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@color/blue_zoe"
             android:layout_marginBottom="@dimen/create_new_wallet_margin_bottom"
-            android:text="@string/create_a_new_wallet"
+            android:background="@drawable/background_menu"
             android:elevation="2dp"
-            android:textStyle="normal"
-            android:textColor="@color/white"
+            android:text="@string/create_a_new_wallet"
+            android:textAllCaps="true"
+            android:textColor="@color/black"
             android:textSize="16sp"
-            android:textAllCaps="true" />
+            android:textStyle="normal" />
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="2dp"
-            android:layout_marginTop="@dimen/divider_margin_top"
-            android:layout_marginStart="16dp"
-            android:layout_marginEnd="16dp"
-            android:background="@color/grey_bar"/>
+
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/already_label_margin_top"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="@dimen/sp20"
             android:text="@string/already_have_a_wallet"
-            android:textColor="@color/text_dark_gray"
-            android:textSize="16sp"
-            android:layout_gravity="center_horizontal"/>
+            android:textColor="@color/white"
+            android:textSize="16sp" />
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="16dp"
-            android:layout_marginBottom="@dimen/bottom_buttons_holder_margin_bottom">
+            android:layout_marginBottom="@dimen/bottom_buttons_holder_margin_bottom"
+            android:orientation="horizontal">
 
             <Button
                 android:id="@+id/button_watch"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/watch"
-                android:layout_weight="1.0"
-                android:background="@drawable/background_white_button"
-                android:elevation="2dp"
                 android:layout_marginEnd="4dp"
+                android:layout_weight="1.0"
+                android:background="@drawable/background_button_splash"
+                android:elevation="2dp"
                 android:padding="2dp"
+                android:textSize="18sp"
+                android:fontFamily="@font/font_bold"
+                android:text="@string/watch"
                 android:textAllCaps="true"
-                android:textColor="@color/tealish"/>
+                android:textColor="@color/white" />
 
             <Button
                 android:id="@+id/button_import"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/action_import"
-                android:layout_weight="1.0"
-                android:background="@drawable/background_white_button"
-                android:elevation="2dp"
                 android:layout_marginStart="4dp"
+                android:layout_weight="1.0"
+                android:background="@drawable/background_button_splash"
+                android:elevation="2dp"
                 android:padding="2dp"
+                android:textSize="18sp"
+                android:fontFamily="@font/font_bold"
+                android:text="@string/action_import"
                 android:textAllCaps="true"
-                android:textColor="@color/tealish"/>
+                android:textColor="@color/white" />
 
         </LinearLayout>
     </LinearLayout>
