--- a/app/src/main/res/drawable/background_bottom_navigation.xml
+++ b/app/src/main/res/drawable/background_bottom_navigation.xml
@@ -7,8 +7,10 @@
         <shape android:shape="rectangle">
             <stroke
                 android:width="1dp"
-                android:color="@color/mercury" />
-            <solid android:color="@color/colorPrimary" />
+                android:color="#EDF1F9" />
+            <corners android:topLeftRadius="30dp" android:topRightRadius="30dp"
+                android:bottomLeftRadius="0dp" android:bottomRightRadius="0dp"/>
+            <solid android:color="#EDF1F9" />
         </shape>
     </item>
 </layer-list>
