--- a/app/src/main/res/drawable/ic_tab_settings_active.xml
+++ b/app/src/main/res/drawable/ic_tab_settings_active.xml
@@ -14,7 +14,7 @@
     <clip-path android:pathData="M0,0.005L24,0.005 24,24.005 0,24.005z M 0,0"/>
     <path
         android:pathData="M12,9.005c-1.654,0 -3,1.346 -3,3s1.346,3 3,3 3,-1.346 3,-3 -1.346,-3 -3,-3m0,8c-2.757,0 -5,-2.243 -5,-5s2.243,-5 5,-5 5,2.243 5,5 -2.243,5 -5,5"
-        android:fillColor="#FFF"
+        android:fillColor="#EDF1F9"
         android:fillType="evenOdd"/>
   </group>
 </vector>
