--- a/app/src/main/res/layout/layout_bottom_navigation.xml
+++ b/app/src/main/res/layout/layout_bottom_navigation.xml
@@ -6,38 +6,14 @@
     android:background="@drawable/background_bottom_navigation"
     android:elevation="0dp"
     android:orientation="vertical"
-    app:elevation="0dp">
+    app:elevation="0dp"
+    >
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:gravity="center_vertical"
         android:orientation="horizontal">
-
-        <LinearLayout
-            android:id="@+id/wallet_tab"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_gravity="center"
-            android:layout_weight="1"
-            android:gravity="center"
-            android:orientation="vertical">
-
-            <ImageView
-                android:id="@+id/nav_wallet"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@drawable/ic_tab_wallet" />
-
-            <TextView
-                android:id="@+id/nav_wallet_text"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:fontFamily="@font/font_semibold"
-                android:text="@string/wallet_label"
-                android:textColor="@color/dove"
-                android:textSize="12sp" />
-        </LinearLayout>
 
         <LinearLayout
             android:id="@+id/activity_tab"
@@ -60,7 +36,33 @@
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/font_semibold"
                 android:text="@string/activity_label"
-                android:textColor="@color/dove"
+                android:textColor="@color/PrimaryColorDark"
+                android:textSize="12sp" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/wallet_tab"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_gravity="center"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:orientation="vertical"
+            >
+
+            <ImageView
+                android:id="@+id/nav_wallet"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/ic_tab_wallet" />
+
+            <TextView
+                android:id="@+id/nav_wallet_text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/font_semibold"
+                android:text="@string/wallet_label"
+                android:textColor="@color/PrimaryColorDark"
                 android:textSize="12sp" />
         </LinearLayout>
 
@@ -85,45 +87,34 @@
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/font_semibold"
                 android:text="@string/browser_label"
-                android:textColor="@color/dove"
+                android:textColor="@color/PrimaryColorDark"
                 android:textSize="12sp" />
         </LinearLayout>
 
-        <RelativeLayout
+        <LinearLayout
             android:id="@+id/settings_tab"
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:layout_gravity="center_horizontal"
+            android:layout_gravity="center"
             android:layout_weight="1"
             android:gravity="center"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            >
 
             <ImageView
                 android:id="@+id/nav_settings"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_centerHorizontal="true"
                 android:src="@drawable/ic_tab_settings" />
 
             <TextView
                 android:id="@+id/nav_settings_text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_below="@id/nav_settings"
-                android:layout_centerHorizontal="true"
                 android:fontFamily="@font/font_semibold"
-                android:lineSpacingExtra="8sp"
                 android:text="@string/settings_label"
-                android:textColor="@color/dove"
+                android:textColor="@color/PrimaryColorDark"
                 android:textSize="12sp" />
-
-            <LinearLayout
-                android:id="@+id/spacer"
-                android:layout_width="2dp"
-                android:layout_height="10dp"
-                android:layout_centerInParent="true"
-                android:background="#00000000"
-                android:orientation="horizontal" />
 
             <TextView
                 android:id="@+id/settings_badge"
@@ -137,7 +128,7 @@
                 android:textColor="@color/white"
                 android:textSize="12sp"
                 android:visibility="gone" />
-        </RelativeLayout>
+        </LinearLayout>
 
     </LinearLayout>
 
