--- a/app/src/main/res/drawable/ic_plus.xml
+++ b/app/src/main/res/drawable/ic_plus.xml
@@ -5,10 +5,10 @@
     android:viewportHeight="24">
     <path
         android:pathData="M12,12m-12,0a12,12 0,1 1,24 0a12,12 0,1 1,-24 0"
-        android:fillColor="#007FED"
+        android:fillColor="#17191F"
         android:fillType="evenOdd"/>
     <path
         android:pathData="M12,5c0.552,0 1,0.448 1,1v5h5c0.552,0 1,0.448 1,1s-0.448,1 -1,1h-5.001L13,18c0,0.552 -0.448,1 -1,1s-1,-0.448 -1,-1l-0.001,-5H6c-0.552,0 -1,-0.448 -1,-1s0.448,-1 1,-1h5V6c0,-0.552 0.448,-1 1,-1z"
-        android:fillColor="#FFF"
+        android:fillColor="#FCFDFD"
         android:fillType="evenOdd"/>
 </vector>
