--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -3,34 +3,33 @@
     xmlns:custom="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#347AF0">
+    android:background="#17191F">
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="400dp"
         android:layout_above="@id/layout_new_wallet"
         android:layout_alignParentTop="true"
-        android:orientation="vertical"
-        android:gravity="center">
+        android:layout_marginBottom="0dp"
+        android:gravity="center"
+        android:orientation="vertical">
 
         <ImageView
             android:id="@+id/splash_image"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="80dp"
+            android:layout_height="77dp"
             android:background="@drawable/ic_logo_zoe"
-            android:gravity="center_horizontal"
-            android:scaleX="2"
-            android:scaleY="2" />
+            android:gravity="center_horizontal" />
 
         <TextView
-            android:layout_width="match_parent"
+            android:layout_width="340dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="50dp"
+            android:layout_marginTop="15dp"
             android:fontFamily="@font/font_bold"
             android:gravity="center_horizontal"
             android:text="@string/welcome_to_alphawallet"
             android:textColor="@color/white"
-            android:textSize="26sp" />
+            android:textSize="50dp" />
 
 
     </LinearLayout>
@@ -42,24 +41,34 @@
         android:layout_alignParentBottom="true"
         android:layout_marginStart="40dp"
         android:layout_marginEnd="40dp"
-        android:layout_marginBottom="90dp"
+        android:layout_marginBottom="80dp"
         android:orientation="vertical"
         android:visibility="visible">
 
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="@dimen/sp20"
+            android:text="Don't have a wallet?"
+            android:textColor="@color/white"
+            android:textSize="14sp"
+            android:layout_marginBottom="15dp"/>
+
         <Button
             android:id="@+id/button_create"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_width="230dp"
+            android:layout_height="50dp"
+            android:layout_gravity="center_horizontal"
             android:layout_marginBottom="@dimen/create_new_wallet_margin_bottom"
             android:background="@drawable/background_menu"
             android:elevation="2dp"
             android:text="@string/create_a_new_wallet"
-            android:textAllCaps="true"
-            android:textColor="@color/black"
+            android:textAllCaps="false"
+            android:textColor="@color/white"
             android:textSize="16sp"
-            android:textStyle="normal" />
-
-
+            android:fontFamily="@font/font_semibold"
+            />
 
         <TextView
             android:layout_width="wrap_content"
@@ -68,46 +77,36 @@
             android:layout_marginTop="@dimen/sp20"
             android:text="@string/already_have_a_wallet"
             android:textColor="@color/white"
-            android:textSize="16sp" />
+            android:textSize="14sp"
+            android:layout_marginBottom="15dp"/>
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+
+
+        <Button
+            android:id="@+id/button_import"
+            android:layout_width="210dp"
+            android:layout_height="50dp"
+            android:background="@drawable/background_button_splash"
             android:layout_gravity="center_horizontal"
-            android:layout_marginTop="16dp"
-            android:layout_marginBottom="@dimen/bottom_buttons_holder_margin_bottom"
-            android:orientation="horizontal">
+            android:elevation="2dp"
+            android:textSize="16sp"
+            android:fontFamily="@font/font_semibold"
+            android:text="@string/action_import"
+            android:textAllCaps="false"
+            android:textColor="@color/white"
+            android:layout_marginBottom="10dp"/>
 
-            <Button
-                android:id="@+id/button_watch"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginEnd="4dp"
-                android:layout_weight="1.0"
-                android:background="@drawable/background_button_splash"
-                android:elevation="2dp"
-                android:padding="2dp"
-                android:textSize="18sp"
-                android:fontFamily="@font/font_bold"
-                android:text="@string/watch"
-                android:textAllCaps="true"
-                android:textColor="@color/white" />
-
-            <Button
-                android:id="@+id/button_import"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="4dp"
-                android:layout_weight="1.0"
-                android:background="@drawable/background_button_splash"
-                android:elevation="2dp"
-                android:padding="2dp"
-                android:textSize="18sp"
-                android:fontFamily="@font/font_bold"
-                android:text="@string/action_import"
-                android:textAllCaps="true"
-                android:textColor="@color/white" />
-
-        </LinearLayout>
+        <Button
+            android:id="@+id/button_watch"
+            android:layout_width="210dp"
+            android:layout_height="50dp"
+            android:background="@drawable/background_button_splash"
+            android:layout_gravity="center_horizontal"
+            android:elevation="2dp"
+            android:textSize="16sp"
+            android:fontFamily="@font/font_semibold"
+            android:text="@string/watch"
+            android:textAllCaps="false"
+            android:textColor="@color/white"/>
     </LinearLayout>
 </RelativeLayout>
