--- a/app/src/main/res/layout/activity_token_management.xml
+++ b/app/src/main/res/layout/activity_token_management.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:tools="http://schemas.android.com/tools"
-    android:background="@color/colorPrimary"
+    android:background="@color/black"
     android:orientation="vertical"
     android:scrollbarAlwaysDrawVerticalTrack="true"
     android:scrollbars="vertical">
@@ -12,36 +12,36 @@
 
     <LinearLayout
         android:id="@+id/layout_search_tokens"
-        android:layout_width="match_parent"
-        android:layout_height="44dp"
-        android:orientation="horizontal"
-        android:layout_marginStart="@dimen/dp8"
-        android:layout_marginEnd="@dimen/dp8"
+        android:layout_width="800dp"
+        android:layout_height="41dp"
+        android:layout_marginStart="25dp"
+        android:layout_marginTop="80dp"
+        android:layout_marginEnd="25dp"
         android:layout_marginBottom="@dimen/dp16"
-        android:gravity="center_vertical"
         android:background="@drawable/background_round_search"
-        android:layout_marginTop="?actionBarSize">
+        android:gravity="center_vertical"
+        android:orientation="horizontal">
 
         <androidx.appcompat.widget.AppCompatImageView
             android:layout_width="@dimen/dp24"
             android:layout_height="@dimen/dp24"
             android:layout_marginStart="@dimen/dp12"
-            android:src="@drawable/ic_search_small"/>
+            android:src="@drawable/ic_search_small" />
 
         <androidx.appcompat.widget.AppCompatEditText
             android:id="@+id/edit_search"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginStart="@dimen/dp8"
-            android:inputType="textFilter"
-            android:hint="@string/search_for_tokens"
-            android:background="@null"
             android:layout_marginEnd="@dimen/dp16"
-            android:maxLines="1"
+            android:background="@null"
+            android:hint="@string/search_for_tokens"
+            android:inputType="textFilter"
             android:maxLength="20"
-            android:textColor="@color/dove"
-            android:textColorHint="@color/dove"
-            android:textSize="@dimen/sp17"/>
+            android:maxLines="1"
+            android:textColor="@color/black"
+            android:textColorHint="@color/black"
+            android:textSize="@dimen/sp17" />
 
     </LinearLayout>
 
