--- a/app/src/main/res/layout/item_manage_token.xml
+++ b/app/src/main/res/layout/item_manage_token.xml
@@ -7,10 +7,13 @@
 
     <RelativeLayout
         android:id="@+id/layout_list_item"
-        android:layout_width="match_parent"
+        android:layout_width="380dp"
         android:layout_height="80dp"
-        android:background="@color/white"
-        android:orientation="horizontal">
+        android:background="@drawable/tokenbackgroundtest"
+        android:orientation="horizontal"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginBottom="15dp"
+        android:layout_marginTop="15dp">
 
         <LinearLayout
             android:id="@+id/icon_wrapper"
@@ -37,9 +40,9 @@
             android:layout_marginStart="@dimen/dp12"
             android:layout_toStartOf="@id/switch_enabled"
             android:layout_toEndOf="@id/icon_wrapper"
-            android:fontFamily="@font/font_regular"
-            android:textColor="@color/black"
-            android:textSize="18sp"
+            android:fontFamily="@font/font_semibold"
+            android:textColor="@color/white"
+            android:textSize="16sp"
             tools:text="Sample Token Name" />
 
         <com.google.android.material.switchmaterial.SwitchMaterial
@@ -52,17 +55,11 @@
             android:theme="@style/SettingsItemSwitchAppearance" />
 
         <View
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:layout_alignParentBottom="true"
-            android:background="@color/mercury" />
-
-        <View
             android:id="@+id/view_overlay"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@color/translucentWhite"
-            android:visibility="gone" />
+            android:background="@color/black"
+            android:visibility="gone"/>
 
     </RelativeLayout>
 </FrameLayout>
