--- a/app/src/main/res/layout/layout_activity_history.xml
+++ b/app/src/main/res/layout/layout_activity_history.xml
@@ -21,20 +21,21 @@
         android:id="@+id/layout_no_recent_transactions"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingBottom="@dimen/dp18"
         android:orientation="vertical"
-        android:visibility="gone">
+        android:paddingBottom="@dimen/dp18"
+        android:background="@color/black"
+        android:visibility="visible">
 
         <TextView
             android:id="@+id/no_recent_transactions"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:layout_marginBottom="10dp"
             android:layout_marginTop="20dp"
-            android:fontFamily="@font/font_light"
+            android:layout_marginBottom="5dp"
+            android:fontFamily="@font/font_bold"
             android:text="@string/no_recent_transactions"
-            android:textColor="@color/text_dark_gray"
+            android:textColor="@color/white"
             android:textSize="18sp" />
 
         <TextView
@@ -42,9 +43,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:fontFamily="@font/font_regular"
+            android:fontFamily="@font/font_light"
             android:text="@string/no_recent_transactions_subtext"
-            android:textColor="@color/text_dark_gray"
+            android:textColor="@color/white"
             android:textSize="13sp" />
     </LinearLayout>
 
@@ -54,6 +55,6 @@
         android:layout_height="wrap_content"
         android:padding="30dp"
         android:layout_gravity="center_horizontal"
-        android:visibility="visible" />
+        android:visibility="gone" />
 
 </LinearLayout>
