--- a/app/src/main/res/layout/layout_manage_tokens.xml
+++ b/app/src/main/res/layout/layout_manage_tokens.xml
@@ -14,17 +14,16 @@
         android:layout_height="wrap_content"
         android:layout_gravity="end|center_vertical"
         android:layout_marginEnd="8dp"
-        android:fontFamily="@font/font_semibold"
+        android:fontFamily="@font/font_regular"
         android:text="@string/add_hide_tokens"
-        android:textColor="@color/colorHighlight"
-        android:textSize="17sp" />
+        android:textColor="@color/black"
+        android:textSize="14sp" />
 
     <ImageView
         android:id="@+id/img_add_token"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="18dp"
+        android:layout_height="18dp"
         android:layout_gravity="end|center_vertical"
-        android:src="@drawable/ic_plus"
-        android:visibility="gone" />
+        android:src="@drawable/ic_plus" />
 
 </LinearLayout>
