--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -94,7 +94,7 @@
 	<color name="binance_main">#f3ba2f</color>
 
 	<!-- Fiji Colour Pallette -->
-	<color name="black">#000000</color>
+	<color name="black">#17191F</color>
 	<color name="mine">#2f2f2f</color>
 	<color name="dove">#727272</color>
 	<color name="dusty">#999999</color>
@@ -104,7 +104,7 @@
 	<color name="mercury">#e9e9e9</color>
 	<color name="concrete">#f2f2f2</color>
 	<color name="alabaster">#fbfbfb</color>
-	<color name="white">#ffffff</color>
+	<color name="white">#FCFDFD</color>
 	<color name="solitude">#e6f3ff</color>
 	<color name="azure">#007fed</color>
 	<color name="azure_hover">#1993fd</color>
