--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -66,7 +66,7 @@
     </style>
 
     <style name="SettingsItemSwitchAppearance" parent="Theme.AppCompat.Light">
-        <item name="colorControlActivated">@color/azure</item>
+        <item name="colorControlActivated">@color/white</item>
         <item name="colorSwitchThumbNormal">@color/dove</item>
     </style>
 
