--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -68,6 +68,8 @@
 	<color name="dark_seed_danger">#cb1b1b</color>
 	<color name="nasty_green">#75b943</color>
 	<color name="blue_zoe">#325b9f</color>
+	<color name="darkgrey_zoe">#18191E</color>
+
 	<color name="inactive_green">#d7ebc8</color>
 	<color name="material_green">#009688</color>
 	<color name="viewfinder_mask">#60000000</color>
