--- a/app/src/main/res/drawable/ic_tab_wallet.xml
+++ b/app/src/main/res/drawable/ic_tab_wallet.xml
@@ -1,18 +1,16 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
     android:width="24dp"
     android:height="24dp"
-    android:viewportWidth="24"
-    android:viewportHeight="24">
+    android:viewportWidth="512.076"
+    android:viewportHeight="512.076">
+
   <path
-      android:pathData="M15,14.996c0,0.553 -0.448,1 -1,1s-1,-0.447 -1,-1c0,-0.553 0.448,-1 1,-1s1,0.447 1,1"
-      android:fillColor="#FFF"
-      android:fillType="evenOdd"/>
+      android:fillColor="#cee1f2"
+      android:pathData="M80.038 392v-214.457c-33-8.495-57.744-37.511-59.838-72.637l-0.162 0.17 v286.924c0 55.271 44.806 100.076 100.076 100.076h60c-55.27 0-100.076-44.805-100.076-100.076z" />
   <path
-      android:pathData="M9,15c0,2.21 1.79,4 4,4h9v3c0,1.1 -0.9,2 -2,2H2c-1.1,0 -2,-0.9 -2,-2V8c0,-0.96 0.68,-1.76 1.58,-1.95v-0.01c0.01,-0.01 0.02,-0.03 0.04,-0.04h18.82c0.01,0.02 0.03,0.04 0.05,0.06C21.36,6.28 22,7.07 22,8v3h-9c-2.21,0 -4,1.79 -4,4"
-      android:fillColor="#9B9B9B"
-      android:fillType="evenOdd"/>
+      android:fillColor="#17191F"
+      android:pathData="M492.039 141.076c11.046 0 20-8.954 20-20v-21c0-55.182-44.895-100.076-100.077-100.076 0 0-313.508 0.047 -314.281 0.138 -26.389 0.922 -51.738 12.246-70.01 31.392-18.729 19.624-28.493 45.148-27.574 72.003-0.038 0.509 -0.058 288.467-0.058 288.467 0 66.21 53.866 120.076 120.076 120.076h291.848c55.182 0 100.076-44.894 100.076-100.076v-151.848c0-55.182-44.894-100.076-100.076-100.076h-311.925c-32.111 0-58.437-25.098-59.934-57.138-0.761-16.292 5.1-31.844 16.502-43.792 11.567-12.12 27.812-19.07 44.568-19.07 0.591 0 310.787-0.076 310.787-0.076 33.126 0 60.076 26.95 60.076 60.076v21c0.002 11.046 8.956 20 20.002 20zm-392.001 59h311.924c33.126 0 60.076 26.95 60.076 60.076v151.848c0 33.126-26.95 60.076-60.076 60.076h-291.847c-44.154 0-80.076-35.922-80.076-80.076v-211.843c16.728 12.53 37.513 19.919 59.999 19.919z" />
   <path
-      android:pathData="M14,16c-0.55,0 -1,-0.45 -1,-1s0.45,-1 1,-1 1,0.45 1,1 -0.45,1 -1,1m9,-3H13c-1.1,0 -2,0.9 -2,2s0.9,2 2,2h10c0.54,0 1,-0.46 1,-1v-2c0,-0.54 -0.46,-1 -1,-1M18.27,5H5.69L13.4,0.282c0.95,-0.583 2.18,-0.233 2.73,0.784L18.27,5z"
-      android:fillColor="#9B9B9B"
-      android:fillType="evenOdd"/>
+      android:fillColor="#007FED"
+      android:pathData="M432.039 336.076c0 13.807-11.193 25-25 25s-25-11.193-25-25 11.193-25 25-25 25 11.193 25 25zm0-236c0-11.046-8.954-20-20-20h-312c-11.046 0-20 8.954-20 20s8.954 20 20 20h312c11.045 0 20-8.954 20-20z" />
 </vector>
