--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -3,108 +3,108 @@
     xmlns:custom="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/white">
+    android:background="#ffffff">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_above="@id/layout_new_wallet"
         android:layout_alignParentTop="true"
-        android:orientation="vertical"
-        android:gravity="center">
+        android:layout_marginBottom="0dp"
+        android:gravity="center"
+        android:orientation="vertical">
 
         <ImageView
             android:id="@+id/splash_image"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="@drawable/ic_logo"
-            android:gravity="center_horizontal"/>
+            android:layout_width="180dp"
+            android:layout_height="160dp"
+            android:background="@drawable/ic_logo_zoe"
+            android:gravity="center_horizontal" />
 
         <TextView
-            android:layout_marginTop="9dp"
-            android:layout_width="match_parent"
+            android:layout_width="283dp"
             android:layout_height="wrap_content"
-            android:textSize="26sp"
-            android:textColor="@color/text_black"
+            android:layout_marginTop="15dp"
+            android:fontFamily="@font/font_regular"
             android:gravity="center_horizontal"
-            android:text="@string/welcome_to_alphawallet"/>
+            android:text="@string/welcome_to_alphawallet"
+            android:textColor="#256CFE"
+            android:textSize="40dp" />
+
 
     </LinearLayout>
 
     <LinearLayout
         android:id="@+id/layout_new_wallet"
-        android:visibility="gone"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:layout_marginEnd="16dp"
-        android:layout_marginStart="16dp"
-        android:orientation="vertical">
-
-        <Button
-            android:id="@+id/button_create"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@color/nasty_green"
-            android:layout_marginBottom="@dimen/create_new_wallet_margin_bottom"
-            android:text="@string/create_a_new_wallet"
-            android:elevation="2dp"
-            android:textStyle="normal"
-            android:textColor="@color/white"
-            android:textSize="16sp"
-            android:textAllCaps="true" />
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="2dp"
-            android:layout_marginTop="@dimen/divider_margin_top"
-            android:layout_marginStart="16dp"
-            android:layout_marginEnd="16dp"
-            android:background="@color/grey_bar"/>
+        android:layout_marginStart="40dp"
+        android:layout_marginEnd="40dp"
+        android:layout_marginBottom="60dp"
+        android:orientation="vertical"
+        android:visibility="gone">
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/already_label_margin_top"
-            android:text="@string/already_have_a_wallet"
-            android:textColor="@color/text_dark_gray"
-            android:textSize="16sp"
-            android:layout_gravity="center_horizontal"/>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
             android:layout_gravity="center_horizontal"
-            android:layout_marginTop="16dp"
-            android:layout_marginBottom="@dimen/bottom_buttons_holder_margin_bottom">
+            android:layout_marginTop="@dimen/sp20"
+            android:layout_marginBottom="15dp"
+            android:text="Don't have a wallet?"
+            android:textColor="@color/darkgrey_zoe"
+            android:textSize="14sp" />
 
-            <Button
-                android:id="@+id/button_watch"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/watch"
-                android:layout_weight="1.0"
-                android:background="@drawable/background_white_button"
-                android:elevation="2dp"
-                android:layout_marginEnd="4dp"
-                android:padding="2dp"
-                android:textAllCaps="true"
-                android:textColor="@color/tealish"/>
+        <Button
+            android:id="@+id/button_create"
+            android:layout_width="230dp"
+            android:layout_height="50dp"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginBottom="@dimen/create_new_wallet_margin_bottom"
+            android:background="@drawable/background_menu"
+            android:elevation="2dp"
+            android:fontFamily="@font/font_semibold"
+            android:text="@string/create_a_new_wallet"
+            android:textAllCaps="false"
+            android:textColor="@color/white"
+            android:textSize="16sp" />
 
-            <Button
-                android:id="@+id/button_import"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/action_import"
-                android:layout_weight="1.0"
-                android:background="@drawable/background_white_button"
-                android:elevation="2dp"
-                android:layout_marginStart="4dp"
-                android:padding="2dp"
-                android:textAllCaps="true"
-                android:textColor="@color/tealish"/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="@dimen/sp20"
+            android:layout_marginBottom="15dp"
+            android:text="@string/already_have_a_wallet"
+            android:textColor="@color/darkgrey_zoe"
+            android:textSize="14sp" />
 
-        </LinearLayout>
+
+        <Button
+            android:id="@+id/button_import"
+            android:layout_width="210dp"
+            android:layout_height="50dp"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginBottom="10dp"
+            android:background="@drawable/background_button_splash"
+            android:elevation="2dp"
+            android:fontFamily="@font/font_semibold"
+            android:text="@string/action_import"
+            android:textAllCaps="false"
+            android:textColor="@color/darkgrey_zoe"
+            android:textSize="16sp" />
+
+        <Button
+            android:id="@+id/button_watch"
+            android:layout_width="210dp"
+            android:layout_height="50dp"
+            android:layout_gravity="center_horizontal"
+            android:background="@drawable/background_button_splash"
+            android:elevation="2dp"
+            android:fontFamily="@font/font_semibold"
+            android:text="@string/watch"
+            android:textAllCaps="false"
+            android:textColor="@color/darkgrey_zoe"
+            android:textSize="16sp" />
     </LinearLayout>
 </RelativeLayout>
