--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,17 +11,17 @@
 	<color name="toolbar_text_color">@color/black</color>
 	<color name="bottom_dialog_title">#89000000</color>
 	<color name="bottom_dialog_item">#dd000000</color>
-    <color name="semitransparentWhite">#AAFFFFFF</color>
+	<color name="semitransparentWhite">#AAFFFFFF</color>
 	<color name="white20">#32FFFFFF</color>
 	<color name="translucentWhite">#80FFFFFF</color>
 	<color name="translucentWhiteSolid">#A0FFFFFF</color>
-    <color name="transparent">#00000000</color>
-    <color name="item_icon_tint">#89000000</color>
+	<color name="transparent">#00000000</color>
+	<color name="item_icon_tint">#89000000</color>
 	<color name="blur">#80000000</color>
-    <color name="grey">#EEEEEE</color>
-    <color name="holo_blue">#FF33b5e5</color>
+	<color name="grey">#EEEEEE</color>
+	<color name="holo_blue">#FF33b5e5</color>
 	<color name="tealish">#239ec5</color>
-    <color name="title_color">#333333</color>
+	<color name="title_color">#333333</color>
 	<color name="button_colour">#69c800</color>
 	<color name="button_pressed_colour">#b4cd99</color>
 	<color name="button_disabled_colour">#b4cd99</color>
@@ -151,6 +151,7 @@
 	<color name="light_blue_grey_two">#c7c7cc</color>
 	<color name="blue_grey">#8e8e93</color>
 	<color name="grey_8d">#8d8d8d</color>
-    <color name="greyf3">#f3f4f5</color>
+	<color name="greyf3">#f3f4f5</color>
 	<color name="logo_grey">#F2F4F7</color>
+	<color name="darkgrey_zoe">#18191E</color>
 </resources>
